--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Your Name] - Staff DevSecOps Engineer</title>
+    <title>Bradley Peatross - Staff DevSecOps Engineer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="container">
-                <h1 class="site-title">[Your Name]</h1>
+                <h1 class="site-title">Bradley Peatross</h1>
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#experience">Experience</a></li>
@@ -33,12 +33,12 @@
         <section id="about" class="container section">
             <h2>About Me</h2>
              <!-- Optional: Add a professional photo here
-             <img src="your-photo.jpg" alt="[Your Name]" class="profile-photo">
+             <img src="your-photo.jpg" alt="Bradley Peatross" class="profile-photo">
              -->
             <p>
                 Experienced Staff DevSecOps Engineer with [Your total years] years specializing in secure DoD environments. Proven ability to stabilize, re-architect, and manage complex on-premise and cloud (Azure) Kubernetes platforms using GitOps, IaC, and modern cloud-native tooling. Passionate about automation, security, and enabling development teams. Active TS/SCI clearance.
             </p>
-             <a href="[Link to your PDF Resume - e.g., resume.pdf]" target="_blank" class="button">Download Resume (PDF)</a>
+             <a href="BradleyPeatross.github.io\Peatross B (2025).pdf" target="_blank" class="button">Download Resume (PDF)</a>
         </section>
 
         <section id="experience" class="container section">
@@ -203,16 +203,14 @@
             <h2>Contact</h2>
             <p>Feel free to reach out!</p>
             <ul>
-                <li>Email: <a href="mailto:[Your Email Address]">[Your Email Address]</a></li>
-                <li>LinkedIn: <a href="[Your LinkedIn Profile URL]" target="_blank">[Your LinkedIn Profile URL]</a></li>
-                <li>GitHub: <a href="https://github.com/[Your GitHub Username]" target="_blank">[Your GitHub Username]</a></li>
+                <li>Email: <a href="mailto:peatrossbs@gmail.com">peatrossbs@gmail.com</a></li>
             </ul>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>© <span id="year"></span> [Your Name]. All rights reserved.</p>
+            <p>© <span id="year"></span> Bradley Peatross. All rights reserved.</p>
         </div>
     </footer>
 
