--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
              <img src="your-photo.jpg" alt="Bradley Peatross" class="profile-photo">
              -->
             <p>
-                Experienced Staff DevSecOps Engineer with [Your total years] years specializing in secure DoD environments. Proven ability to stabilize, re-architect, and manage complex on-premise and cloud (Azure) Kubernetes platforms using GitOps, IaC, and modern cloud-native tooling. Passionate about automation, security, and enabling development teams. Active TS/SCI clearance.
+                Experienced Staff DevSecOps Engineer with 24 years specializing in secure DoD environments. Proven ability to stabilize, re-architect, and manage complex on-premise and cloud (Azure) Kubernetes platforms using GitOps, IaC, and modern cloud-native tooling. Passionate about automation, security, and enabling development teams. Active TS/SCI clearance.
             </p>
-             <a href="BradleyPeatross.github.io\Peatross B (2025).pdf" target="_blank" class="button">Download Resume (PDF)</a>
+             <a href="Peatross B (2025).pdf" target="_blank" class="button">Download Resume (PDF)</a>
         </section>
 
         <section id="experience" class="container section">
